// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/needs_team should match snapshots for init with existing team 1`] = `
<Routes>
  <Route
    element={[Function]}
    path="/:team/integrations"
  />
  <Route
    element={[Function]}
    path="/:team/emoji"
  />
  <Route
    render={[Function]}
  />
</Routes>
`;

exports[`components/needs_team should match snapshots for init with existing team 2`] = `
<Routes>
  <Route
    component={[Function]}
    path="/:team/integrations"
  />
  <Route
    element={[Function]}
    path="/:team/emoji"
  />
  <Route
    render={[Function]}
  />
</Routes>
`;
